--- a/src/Components/Commits/Commits.scss
+++ b/src/Components/Commits/Commits.scss
@@ -3,10 +3,12 @@
 .commits-section{
     background: $color-canvas-main;
     min-height: 100vh;
+    padding-top: 10rem;
     .commit-card{
         width: 1000px;
         background: $color-header-bg;
         border-radius: 10px;
         border: 1px solid $color-border-default;
+        margin: auto;
     }
 }
