--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -32,17 +32,30 @@
         height: 3rem;
         display: flex;
     }
-    a{
+    .repo-nav-link{
         color: #fff;
         text-decoration: none;
-        margin-right: 1rem;
         height: 100%;
         display: flex;
         align-items: center;
         width: max-content;
         padding: 0 1rem;
         border-right: 1px solid $color-border-default;
+        cursor: pointer;
+        position: relative;
+        display: flex;
         
+    }
+    .repo-nav-active{
+        &::after{
+            content: '';
+            height:1px;
+            background: red;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+        }
     }
     .btn-delete-wrapper{
         display: flex;
