--- a/src/Components/Repository bar/RepositoryBar.scss
+++ b/src/Components/Repository bar/RepositoryBar.scss
@@ -4,6 +4,7 @@
     color: #fff;
     cursor: pointer;
     padding: 1rem 0.5rem;
+    position: relative;
     h6{
         font-size: 1rem;
     }
@@ -14,5 +15,16 @@
         overflow: hidden;
         text-overflow: '...';
         white-space: nowrap;
+    }
+}
+.repository-bar-active{
+    &::after{
+        content: '';
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        bottom: 0;
+        background: red;
+        left: 0
     }
 }
